--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h1> Welcome to the clock <br> out time calculator!</h1>
-    <a>
-    Clock in time:
-    <br><input type = "time" id = "f1"/>
-    <br>Time spent at lunch:
-    <br><input type = "time" id = "f2" />
-    <br><output type = "time" id = "f3"/></output>
-  </a>
+    <h3>What time did you clock-in</h3>
+    <input id="clock-in" type="time">
+    <h3>How long did you spend at lunch</h3>
+    <input id="lunch-time" type="time">
+    <h3>What time did you clock-out</h3>
+    <input id="clock-out" type="time">
   </body>
   </html>
