--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <DOCTYPE html>
   <html>
   <head>
-    <script src="main.js"></script>
     <title>Clock Out Calculator</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <h3>What time did you clock-in</h3>
-    <br>
-    <input id="clock-in" type="time">
-    <br>
-    <h3>How long did you spend at lunch</h3>
-    <br>
-    <input id="lunch-time" type="time">
-    <br>
-    <h3>What time did you clock-out</h3>
-    <br>
-    <input id="clock-out" type="time">
+  <a>
+    Clock in time:
+    <input type = "time" id = "f1" min="1:00" max="12:00"/>
+
+    Clock out lunch time:
+    <input type = "time" id = "f2" min="1:00" max="12:00"/>
+
+    Clock in lunch time:
+    <input type = "time" id = "f3" min="1:00" max="12:00"/>
+
+<button onclick="calc();"></button>
+
+    Your Clock out time is:
+    <output type = "time" id = "f6"></output>
+  </a>
+  <script type="text/javascript" src="js/main.js"></script>
+  <script type="text/javascript" src="js/materialize.min.js"></script>
   </body>
   </html>
