--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   <body>
   <a>
     Clock in time:
-    <input type="text" class="timepicker">
+    <input type="text" id = "f1" class="timepicker">
 
     Clock out lunch time:
-    <input type="text" class="timepicker">
+    <input type="text" id = "f2" class="timepicker">
 
     Clock in lunch time:
-    <input type="text" class="timepicker">
+    <input type="text" id = "f3" class="timepicker">
 
 <button onclick="calc();"></button>
 
     Your Clock out time is:
-    <output type = "time" id = "f6"></output>
+    <input type = "text" id = "f7"></input>
   </a>
   <script type = "text/javascript" src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
