--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <button onclick=calc();></button>
 
     Your Clock out time is:
-    <input type = "text" id = "clockOut"></input>
+    <input type = "text" id = "hh">
   </a>
   <script type = "text/javascript" src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
