--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
   </head>
   <body>
+    <div class="row">
+    <div class="col s12 m6">
+      <div class="card grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title">Clock Out Time Calculator</span>
   <a>
     Clock in time:
     <input type="text" id = "clockIn" class="timepicker">
@@ -16,11 +21,15 @@
     Clock in lunch time:
     <input type="text" id = "clockInMeal" class="timepicker">
 
-<button onclick=calc();></button>
+<b class="waves-effect waves-light btn red">Calculate</b>
 
     Your Clock out time is:
     <input type = "text" id = "hh">
   </a>
+      </div>
+    </div>
+  </div>
+</div>
   <script type = "text/javascript" src="main.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
   </body>
