--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Clock Out Calculator</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/css/materialize.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="row">
