--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
   </head>
     <body>
 
+      <c><span>Clock Out Time Calculator</span><br></c>
+
       <div class="container">
         <div class="row">
           <div class="s12 m6 l3">
             <div class="card grey darken-1">
               <div class="card-content white-text">
-                <span class="card-title">Clock Out Time Calculator</span>
                   <a>
                     Clock in time:
-                    <input type="text" id = "clockIn" class="timepicker">
+                  <d><input type="text" id = "clockIn" class="timepicker"></d>
 
                     Clock out lunch time:
-                    <input type="text" id = "clockOutMeal" class="timepicker">
+                    <d><input type="text" id = "clockOutMeal" class="timepicker"></d>
 
                     Clock in lunch time:
-                    <input type="text" id = "clockInMeal" class="timepicker">
+                    <d><input type="text" id = "clockInMeal" class="timepicker"></d>
 
                     <b class="btn red" id="button" onclick="calc()">Calculate</b><br>
-                    
+
                     <span id="message"></span>
                     <span id= "hh"></span>
                   </a>
